grammar.js
        stored_definitions: $ => seq(
            optional($.BOM),
            optional($.within_clause),
            repeat(field("storedDefinitions", $.stored_definition))
        ),
        stored_definition: $ => seq(
            optional(field("final", "final")),
            field("classDefinition", $.class_definition), ";"
        ),

        // A.2.2 Class Definition

        class_definition: $ => seq(
            optional(field("encapsulated", "encapsulated")),
            field("classPrefixes", $.class_prefixes),
            field("classSpecifier", $._class_specifier)
        ),

        class_prefixes: $ => seq(
            optional(field("partial", "partial")),
            choice(
                field("block", "block"),
                field("class", "class"),
                seq(
                    optional(field("expandable", "expandable")),
                    field("connector", "connector")),
                seq(
                    optional(choice(field("impure", "impure"), field("pure", "pure"))),
                    optional(field("operator", "operator")),
                    field("function", "function")),
                field("model", "model"),
                field("operator", "operator"),
                field("package", "package"),
                seq(
                    optional(field("operator", "operator")),
                    field("record", "record")),
                field("type", "type")
            )
        ),

        _class_specifier: $ => choice(
            $.derivative_class_specifier,
            $.enumeration_class_specifier,
            $.extends_class_specifier,
            $.long_class_specifier,
            $.short_class_specifier
        ),

        derivative_class_specifier: $ => seq(
            field("identifier", $.IDENT), "=", "der",
            "(", field("typeSpecifier", $.type_specifier), ",",
            field("argument", $.IDENT), optional(seq(",", field("argument", $.IDENT))), ")",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        enumeration_class_specifier: $ => seq(
            field("identifier", $.IDENT), "=", "enumeration", "(",
            choice(
                optional(field("enumerationLiterals", $.enum_list)),
                field("unspecified", ":")
            ),
            ")",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        long_class_specifier: $ => seq(
            field("identifier", $.IDENT),
            optional(field("descriptionString", $.description_string)),
            optional($.element_list),
            repeat(choice(
                $.public_element_list,
                $.protected_element_list,
                $.algorithm_section,
                $.equation_section
            )),
            optional(field("externalClause", $.external_clause)),
            optional(seq(field("annotationClause", $.annotation_clause), ";")),
            "end",
            field("endIdentifier", $.IDENT)
        ),

        element_list: $ => seq(
            repeat1(seq(field("element", $._element), ";"))
        ),

        _element: $ => choice(
            $.extends_clause,
            $.import_clause,
            $.named_element
        ),

        named_element: $ => seq(
            optional(field("redeclare", "redeclare")),
            optional(field("final", "final")),
            optional(field("inner", "inner")),
            optional(field("outer", "outer")),
            optional(field("replaceable", "replaceable")),
            choice(
                field("classDefinition", $.class_definition),
                field("componentClause", $.component_clause)
            ),
            optional(seq(
                field("constrainingClause", $.constraining_clause),
                optional(field("descriptionString", $.description_string)),
                optional(field("annotationClause", $.annotation_clause))
            )),
        ),

        extends_clause: $ => seq(
            "extends",
            field("typeSpecifier", $.type_specifier),
            optional(field("classModification", $.class_modification)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        component_clause: $ => seq(
            optional(choice(field("flow", "flow"), field("stream", "stream"))),
            optional(choice(field("constant", "constant"), field("discrete", "discrete"), field("parameter", "parameter"))),
            optional(choice(field("input", "input"), field("output", "output"))),
            field("typeSpecifier", $.type_specifier),
            optional(field("subscripts", $.array_subscripts)),
            field("componentDeclarations", $.component_list)
        ),

        component_list: $ => seq(
            field("componentDeclaration", $.component_declaration),
            repeat(seq(",", field("componentDeclaration", $.component_declaration)))
        ),

        component_declaration: $ => seq(
            field("declaration", $.declaration),
            optional(seq("if", field("condition", $.expression))),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        declaration: $ => seq(
            field("identifier", $.IDENT),
            optional(field("subscripts", $.array_subscripts)),
            optional(field("modification", $.modification))
        ),

        // A.2.5 Modification

        modification: $ => choice(
            seq(field("classModification", $.class_modification), optional(seq("=", field("expression", $.expression)))),
            seq(choice("=", ":="), field("expression", $.expression))
        ),

        equation_section: $ => prec.left(seq(
            optional(field("initial", "initial")), "equation",
            optional(field("equations", $.equation_list))
        )),

        equation_list: $ => repeat1(seq(field("equation", $._equation), ";")),

        _equation: $ => choice(
            $.connect_clause,
            $.for_equation,
            $.function_application_equation,
            $.if_equation,
            $.simple_equation,
            $.when_equation
        ),

        simple_equation: $ => seq(
            field("expression1", $.simple_expression), "=", field("expression2", $.expression),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        expression: $ => choice(
            $.if_expression,
            $.range_expression,
            $.simple_expression
        ),

        simple_expression: $ => choice(
            $.unary_expression,
            $.binary_expression,
            $.primary_expression
        ),

        primary_expression: $ => choice(
            $.array_comprehension,
            $.array_concatenation,
            $.array_constructor,
            $.component_reference,
            $.end_expression,
            $.function_application,
            $.literal_expression,
            $.parenthesized_expression
        ),

        literal_expression: $ => choice(
            $.logical_literal_expression,
            $.string_literal_expression,
            $._unsigned_number_literal_expression,
        ),

        _unsigned_number_literal_expression: $ => choice(
            $.unsigned_integer_literal_expression,
            $.unsigned_real_literal_expression,
        ),

        unsigned_real_literal_expression: $ => $.UNSIGNED_REAL,

        type_specifier: $ => seq(
            optional(field("global", ".")), field("name", $.name)
        ),

        name: $ => prec.left(choice(
            seq(field("qualifier", $.name), ".", field("identifier", $.IDENT)),
            field("identifier", $.IDENT)
        )),

        component_reference: $ => prec.left(choice(
            seq(
                field("qualifier", $.component_reference), ".", field("identifier", $.IDENT), optional(field("subscripts", $.array_subscripts))
            ),
            seq(
                optional(field("global", ".")), field("identifier", $.IDENT), optional(field("subscripts", $.array_subscripts))
            )
        )),
