test/corpus/a2-2_der_enum_classes.txt
================
Derivative Class
================

model foo = der(bar, foo);

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (derivative_class_specifier
        (IDENT)
        (type_specifier
          (name
            (IDENT)))
        (IDENT)))))

=============================
Enumeration Unspecified Class
=============================

model foo = enumeration (:);

---

(stored_definitions
  (stored_definition
    (class_definition
      (class_prefixes)
      (enumeration_class_specifier
        (IDENT)))))
